# CCCCF40C053-F6CB-4842-97D5-EC53690FB9FA

./: .BridgeLabelsAndRatings  .BridgeSort  .gitignore  .vale.ini  AGENTS.md  ARCHITECTURE_EVALUATION.md  Bug记录.md  CMakeLists.txt  CMakePresets.json  CppProperties.json  D 待修复.txt  Fix 记录.md  King_Penguin.md  Permadelete.txt  Prompt.md  Prompt_修复.md  QDebug.md  README.md  SENIOR_DEVELOPER_EVALUATION_ZH.md  SvgIcons_updated.h  TUTORIAL.md  all_files.txt  all_src_files.txt  applyCommonFilters_exact_v4.cpp  applyCommonFilters_v4.cpp  check_sqlite.cpp  crash_20260409_113808.dmp  crash_20260409_201443.dmp  crash_20260409_203610.dmp  crash_20260418_200721.dmp  crash_20260418_201059.dmp  crash_20260418_201147.dmp  crash_20260418_201404.dmp  deploy_部署.bat  desktop.ini  extract_code.py  file_index.db-shm  file_index.db-wal  filter_stats_v4.txt  find_emojis.py  (+83 more)
Trial_Version/: Trial_Version.md
backups/incremental/: delta_20260323_172115.json  delta_20260323_175402.json  delta_20260323_175959.json  delta_20260323_181234.json  delta_20260323_184105.json  delta_20260323_184606.json  delta_20260323_185114.json  delta_20260323_185348.json  delta_20260323_190329.json  delta_20260323_225937.json
clipboard-extension/: 20260228_143654_code_export.md  background.js  content.css  content.js  manifest.json  popup.html  popup.js  使用说明.md
rc resources/: app_icon.rc
resources/: app_icon.rc  resources.qrc
resources/qss/: dark_style.qss
src/: main.cpp  manager_main.cpp
src/core/: AES.cpp  AES.h  ActionRecorder.cpp  ClipboardMonitor.cpp  ClipboardMonitor.h  CoreController.cpp  DatabaseManager.cpp  DatabaseManager.h  ExtensionServer.cpp  ExtensionServer.h  FileCryptoHelper.cpp  FileCryptoHelper.h  FileResourceManager.cpp  FileResourceManager.h  FileStorageHelper.cpp  FileStorageHelper.h  HardwareInfoHelper.cpp  HardwareInfoHelper.h  HotkeyManager.cpp  HotkeyManager.h  HttpServer.cpp  HttpServer.h  IPlatformSystem.h  KeyboardHook.cpp  KeyboardHook.h  Logger.cpp  Logger.h  MessageCaptureHandler.cpp  MessageCaptureHandler.h  OCRManager.cpp  OCRManager.h  ReminderService.cpp  ReminderService.h  ServiceLocator.h  ShortcutManager.cpp  ShortcutManager.h  Win32System.h
src/db/: CategoryRepo.cpp  CategoryRepo.h  Database.cpp  Database.h  FileDatabase.cpp  FileDatabase.h  FolderRepo.cpp  FolderRepo.h  ItemRepo.cpp  ItemRepo.h  SyncEngine.cpp  SyncEngine.h
src/meta/: AmMetaJson.cpp  AmMetaJson.h  BatchRenameEngine.cpp  MetadataManager.cpp  MetadataManager.h  SyncQueue.cpp  SyncQueue.h
src/mft/: MftReader.cpp  MftReader.h  PathBuilder.cpp  PathBuilder.h  UsnWatcher.cpp  UsnWatcher.h
src/models/: CategoryModel.cpp  CategoryModel.h  FileCategoryModel.cpp  FileCategoryModel.h  FileSystemTreeModel.cpp  FileSystemTreeModel.h  MainCategoryModel.cpp  MainCategoryModel.h  MainFileTreeModel.cpp  MainFileTreeModel.h  NoteModel.cpp  NoteModel.h  PhysicalCategoryModel.cpp  PhysicalCategoryModel.h
src/ui/: ActivationDialog.cpp  ActivationDialog.h  AddressBar.cpp  AddressBar.h  AdvancedTagSelector.cpp  AdvancedTagSelector.h  CategoryDelegate.h  CategoryLockDialog.cpp  CategoryLockDialog.h  CategoryLockWidget.cpp  CategoryLockWidget.h  CategoryPanel.cpp  CategoryPanel.h  CategoryPasswordDialog.cpp  CategoryPasswordDialog.h  CategorySetPasswordDialog.cpp  CleanListView.cpp  CleanListView.h  ClickableLineEdit.h  ColorPickerWindow.cpp  ColorPickerWindow.h  ContentPanel.cpp  ContentPanel.h  DatabaseLockDialog.h  DraggableListView.h  DropListView.cpp  DropTreeView.cpp  DropTreeView.h  Editor.cpp  Editor.h  FileManagerWindow.cpp  FileManagerWindow.h  FileSearchHistoryPopup.h  FileSearchWidget.cpp  FileSearchWidget.h  FileSearchWindow.cpp  FileSearchWindow.h  FileStorageWindow.cpp  FileStorageWindow.h  FilterPanel.cpp  (+86 more)
src/viewmodels/: MainNoteViewModel.cpp  MainNoteViewModel.h  QuickNoteViewModel.cpp  QuickNoteViewModel.h
参考版_不可修改/: CMakeLists.txt
参考版_不可修改/src/: main.cpp
参考版_不可修改/src/core/: CoreController.cpp
参考版_不可修改/src/db/: CategoryRepo.cpp  CategoryRepo.h  Database.h  ItemRepo.cpp  ItemRepo.h  SyncEngine.h
参考版_不可修改/src/meta/: AmMetaJson.cpp  AmMetaJson.h  BatchRenameEngine.cpp  BatchRenameEngine.h  MetadataManager.cpp
参考版_不可修改/src/mft/: MftReader.cpp  PathBuilder.cpp  PathBuilder.h  UsnWatcher.cpp
参考版_不可修改/src/ui/: CategoryLockDialog.cpp  CategoryLockDialog.h  CategoryModel.cpp  CategoryModel.h  CategoryPanel.cpp  CategorySetPasswordDialog.cpp  CategorySetPasswordDialog.h  ContentPanel.cpp  ContentPanel.h  DropListView.cpp  FilterPanel.h  MainWindow.cpp  MainWindow.h  MetaPanel.cpp  MetaPanel.h  QuickLookWindow.cpp  QuickLookWindow.h  ToolTipOverlay.cpp  TreeItemDelegate.h
旧版本-1/: README.md
旧版本-1/src/core/: HardwareInfoHelper.cpp
旧版本-1/src/ui/: KeywordSearchWidget.cpp  PasswordVerifyDialog.cpp  QuickWindow.cpp  QuickWindow.h  ScreenshotTool.cpp  SettingsWindow.cpp  SystemTray.cpp  SystemTray.h  Toolbox.cpp  UnifiedSearchWindow.cpp
旧版本-2/: CMakeLists.txt
旧版本-2/src/: main.cpp
旧版本-2/src/core/: ClipboardMonitor.cpp  DatabaseManager.cpp  FileCryptoHelper.cpp  HotkeyManager.cpp  OCRManager.cpp  Utils.h
旧版本-2/src/models/: CategoryModel.cpp
旧版本-2/src/ui/: AdvancedTagSelector.cpp  AdvancedTagSelector.h  CategoryDelegate.h  CategoryLockWidget.h  CleanListView.cpp  ClickableLineEdit.h  ColorPickerWindow.cpp  DatabaseLockDialog.cpp  Editor.h  FileSearchWindow.cpp  FileSearchWindow.h  FileStorageWindow.h  FilterPanel.cpp  FilterPanel.h  FireworksOverlay.cpp  FloatingBall.cpp  FramelessDialog.cpp  FramelessDialog.h  GraphWidget.cpp  GraphWidget.h  HeaderBar.cpp  HelpWindow.cpp  KeywordSearchWindow.cpp  KeywordSearchWindow.h  MainWindow.cpp  MainWindow.cpp_snippet  MainWindow.h  MetadataPanel.cpp  MetadataPanel.h  NoteEditWindow.cpp  NoteEditWindow.h  OCRWindow.cpp  PasswordGeneratorWindow.cpp  PathAcquisitionWindow.cpp  PathAcquisitionWindow.h  QuickPreview.h  QuickToolbar.cpp  QuickWindow.cpp  QuickWindow.h  ScreenshotTool.cpp  (+12 more)
旧版本-3/src/: main.cpp
旧版本-3/src/core/: DatabaseManager.cpp  DatabaseManager.h
旧版本-3/src/ui/: FilterPanel.cpp  FilterPanel.h  NoteEditWindow.h  (+4 more)
旧版本-4/src/: main.cpp
(+10 files in other folders)
